<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.github.yupanov.resumeyp.weather.WeatherViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".weather.WeatherFragment">

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="@dimen/margin_normal"
            android:textSize="@dimen/large_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/caba" />

        <TextView
            android:id="@+id/tv_current_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginTop="16dp"
            android:textSize="@dimen/large_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_location"
            tools:text="@string/temp24" />

        <TextView
            android:id="@+id/tv_current_temp_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_temperature"
            app:layout_constraintStart_toStartOf="@+id/tv_current_temp"
            app:layout_constraintTop_toBottomOf="@+id/tv_current_temp" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:textSize="@dimen/large_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_current_temp_label"
            tools:text="@string/weather_description" />

        <TextView
            android:id="@+id/tv_description_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/description_weather"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_description"
            app:layout_constraintTop_toBottomOf="@+id/tv_description" />

        <TextView
            android:id="@+id/tv_min_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginTop="16dp"
            android:textSize="@dimen/large_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_description_label"
            tools:text="@string/temp24" />

        <TextView
            android:id="@+id/tv_min_temp_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/min_temperature"
            app:layout_constraintStart_toStartOf="@+id/tv_min_temp"
            app:layout_constraintTop_toBottomOf="@+id/tv_min_temp" />

        <TextView
            android:id="@+id/tv_max_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="110dp"
            android:layout_marginTop="16dp"
            android:textSize="@dimen/large_text"
            app:layout_constraintStart_toEndOf="@+id/tv_min_temp"
            app:layout_constraintTop_toBottomOf="@+id/tv_description_label"
            tools:text="@string/temp24" />

        <TextView
            android:id="@+id/tv_max_temp_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max_temperature"
            app:layout_constraintStart_toStartOf="@+id/tv_max_temp"
            app:layout_constraintTop_toBottomOf="@+id/tv_max_temp" />

        <TextView
            android:id="@+id/tv_lang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_min_temp_label" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>