<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primaryColor">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/containerPersonal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_small_photo"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="40dp"
                android:contentDescription="@string/photo_description"
                android:src="@drawable/yuri_s_tp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="149dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_normal"
                android:gravity="bottom"
                android:text="@string/name"
                android:textSize="40sp"
                app:layout_constraintStart_toEndOf="@+id/iv_small_photo"
                app:layout_constraintTop_toTopOf="@+id/iv_small_photo" />

            <ImageView
                android:id="@+id/ivMainContacts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/iv_small_photo"
                app:layout_constraintStart_toStartOf="@+id/tv_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_name"
                app:srcCompat="@drawable/ic_whatsapp_glyph_black"
                app:tint="@color/primaryDarkColor" />

            <TextView
                android:id="@+id/tvMainContacts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/contacts_title"
                android:textColor="@color/primaryDarkColor"
                app:layout_constraintBottom_toBottomOf="@+id/ivMainContacts"
                app:layout_constraintStart_toEndOf="@+id/ivMainContacts" />

            <TextView
                android:id="@+id/tv_developer"
                style="@style/BackgroundLight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/android_developer"
                android:textAlignment="center"
                android:textColor="@color/primaryDarkColor"
                android:textSize="34sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_small_photo"
                tools:ignore="TextContrastCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/containerPersonal">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_buttons"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/bt_weather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_normal"
            android:layout_marginBottom="@dimen/margin_normal"
            app:icon="@drawable/ic_sun"
            android:text="@string/weather"
            android:textColor="@color/primaryDarkColor"
            android:backgroundTint="@color/primaryLightColor"
            app:iconTint="@color/primaryDarkColor"
            app:strokeColor="@color/secondaryDarkColor"
            app:strokeWidth="3dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
